# Guardian_Path_Application

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.txt
GuardianPath/: CareRingWindow.cpp  CareRingWindow.h  GuardianPath.qrc  GuardianPath.sln  GuardianPath.ui  GuardianPath.vcxproj  GuardianPath.vcxproj.filters  MonitorApplianceWindow.cpp  MonitorApplianceWindow.h  ResourcesWindow.cpp  ResourcesWindow.h  TrackLocationWindow.cpp  TrackLocationWindow.h  main.cpp  mainwindow.cpp  mainwindow.h
GuardianPath/GuardianPath/x64/Debug/: GuardianPath.exe.recipe  GuardianPath.ilk  vc143.idb
GuardianPath/GuardianPath/x64/Debug/GuardianPath.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  GuardianPath.lastbuildstate  GuardianPath.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  moc.read.1u.tlog  moc.write.1u.tlog  rcc.read.1u.tlog  rcc.write.1u.tlog  uic.read.1u.tlog  uic.write.1u.tlog
GuardianPath/GuardianPath/x64/Debug/qt/: qtvars.xml
GuardianPath/GuardianPath/x64/Debug/qt/moc/: moc_CareRingWindow.cpp  moc_GuardianPath.cpp  moc_MonitorApplianceWindow.cpp  moc_ResourcesWindow.cpp  moc_TrackLocationWindow.cpp  moc_mainwindow.cpp
GuardianPath/GuardianPath/x64/Debug/qt/qmake/: qtvars.vcxproj
GuardianPath/GuardianPath/x64/Debug/qt/rcc/: qrc_GuardianPath.cpp
GuardianPath/GuardianPath/x64/Debug/qt/uic/: ui_GuardianPath.h
resources/: resources.qrc
src/: appliance.cpp  appliance.h  appliances.cpp  appliances.h  carering.cpp  carering.h  contact.cpp  contact.h  dashboard.cpp  dashboard.h  gpsmanager.cpp  gpsmanager.h  location.cpp  location.h  main.cpp  mainwindow.cpp  mainwindow.h  mapview.qml  mongodbmanager.cpp  mongodbmanager.h  resources.cpp  resources.h  sosbutton.cpp  sosbutton.h  statuscard.cpp  statuscard.h  tracklocation.cpp  tracklocation.h
